@@ -1,3 +1,15 @@
+2008-06-28  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclPathObj.c:  Plug memory leak in [Bug 1972879] fix.  Thanks
+	Rolf Ade for detecting and Dan Steffen for the fix [Bug 2004654].
+
+2008-06-26  Andreas Kupries  <andreask@activestate.com>
+
+	* unix/Makefile.in: Followup to my change of 2008-06-25, make code
+	generated by the Makefile and put into the installed tm.tcl
+	conditional on interpreter safeness as well. Thanks to Daniel
+	Steffen for reminding me of that code.
+
 2008-06-25  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.6a1 TAGGED FOR RELEASE ***
